rover/css/styles_ng_rover.css.less
/* ... */
@import "less/app/08_smartband.less"; 

/* x. Rover Angular Animations
==========================================================*/
@import "../rover/css/rover_animation.less";



// back button
.actions-back {
  position: absolute;
  left: 55px;
  top: 10px;
  padding: 0;

  .back-button:not(.button):not(.switch) {
    padding: 6px 20px 4px 45px;
    display:block;
    background-position: 15px -1588px;

    &:hover {
      background-position: 15px -1528px;
    }
  }
}


#main-menu .nav-toggle.updated span.active {
   background-image:  asset-url("image-active-drawer.png") !important;
}

//Added for animation effects
.slide-left.ng-enter,
.slide-left.ng-leave,
.slide-right.ng-enter,
.slide-right.ng-leave {
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  background: inherit;
  -ms-transition: 2.4s ease-in-out;
  -webkit-transition: 2.4s ease-in-out;
  transition:  2.4s ease-in-out;
}

.slide-left.ng-enter {}
.slide-left.ng-enter.ng-enter-active {
  -webkit-transform: translateX(0);
  transform: translateX(0);
}

.slide-left.ng-leave {
  z-index: 100;
  -webkit-transform: translateX(0);
  transform: translateX(0);
}
.slide-left.ng-leave.ng-leave-active {
  -webkit-transform: translateX(-100%);
  transform: translateX(-100%);
}


.slide-right.ng-enter {
  -webkit-transform: translateX(-100%);
  transform: translateX(-100%);
} 

.slide-right.ng-enter.ng-enter-active, 
.slide-right.ng-leave {
  position: absolute;
  -webkit-transform: translateX(0);
  transform: translateX(0);
}

.slide-right.ng-leave.ng-leave-active {
  -webkit-transform: translateX(100%);
  transform: translateX(100%);
}



.container.menu-open .page-current, .container.menu-open .page-locked {
    animation: 0s ease 0s normal both 1 appMenuOpen;
 }
 /* ------------------date -picker ---------------------*/
.pickdate-cell-bg{
  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);
}
.pickdate-container-bg{
  background: url("/assets/date_container_bg.png");
}
.pickadate-header {
  position: relative;
}



.pickadate-main {
  margin: 0;
  padding: 0;
  width: 100%;
  text-align: center;
  font-size: 12px;
}

.pickadate a:visited, .pickadate a {
  color: #666666;
}

.pickadate-cell {
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.pickadate-cell li {
  display: block;
  float: left;
  border-left: 2px solid #f1f1f1;
  border-right: 2px solid #f1f1f1;
  width: 14.285%;
  padding: 2.3%;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
    margin-bottom: 0.5em !important;

}

.pickadate-cell li:nth-child(7n+0) {
  border-right: 2px solid #f1f1f1;
}

.pickadate-cell li:nth-child(1),
.pickadate-cell li:nth-child(8),
.pickadate-cell li:nth-child(15),
.pickadate-cell li:nth-child(22),
.pickadate-cell li:nth-child(29),
.pickadate-cell li:nth-child(36) {
  border-left: 2px solid #f1f1f1;
}


.pickadate-cell .pickadate-disabled,
.pickadate-cell .pickadate-disabled a {
  color: #9D9D9D;
  font-size: 18px;
}


.pickadate-cell .pickadate-outofrange-disabled,
.pickadate-cell .pickadate-outofrange-disabled a,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled a {

  
  color: transparent;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.pickadate-cell .pickadate-enabled {
  cursor: pointer;
  font-size: 18px;
  color: #000;
  font-weight:400;
}


.pickadate-cell .pickadate-active {
  color: #fff !important;
  background-color: #ffaa17;

}

.pickadate-cell .pickadate-active {
  color: #000;

}

.pickadate-cell .pickadate-head {
  color: #9D9D9D;
  line-height: 30px;
  text-align: center;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
  border-top: 0px ;
  border-left: 0px !important;
  border-right: 0px !important;
}

.pickadate-centered-heading {
  text-transform: uppercase;
  color:#000;
  font-weight: normal;
  text-align: center;
  font-size: 1em;
  margin: 13px 0 13px 0;
}

.pickadate-controls {
  position: absolute;
  z-index: 10;
  width: 100%;
}

.pickadate-controls .pickadate-next {
  float: right;
}

.pickadate-controls a {
  text-decoration: none;
  font-size: 0.9em;
}

.pickadate-cell .pickadate-outofrange-disabled,
.pickadate-cell .pickadate-outofrange-disabled a,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled a,
.pickadate-cell .pickadate-active.pickadate-outofrange-disabled,
.pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {

  color: gray;
  color: transparent;

  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.date-picker-bg{
  
  background: url("/assets/texture.png") repeat scroll 0 0 #FCFCFC;
  padding:10px;
  margin:5px;
}
.date-picker-bg_right{
  width:48%;
  float:right;
}
.date-picker-bg_left{
  width:48%;
  float:left;
}

.pickadate_select{
  background: none repeat scroll 0 0 #ffffff !important;
  padding-right:14px;
  color:black;
  box-shadow:none !important;
  outline:0 !important;
}
.float_left{
  float:left;

}
.float_right{
  float:right;

}
.calendar_top_panel{
  background-color:white;
  height:46px;
}
.pickadate-prev,.pickadate-next{
  
  width:30px;
  padding:15px 5px !important;
}
.pickadate-body{
  margin-top:10px;

}
.date_picker_conatiner{
border-style: solid;
border-width: 1px 0;
border-color: #f1f1f1;
height: 410px;
}

.date_range_set_table{
  margin-bottom:0px;
  width:100%;
  tr,td{
    box-shadow: none !important;
  }
  tr{
    border-style: solid;
    border-width: 1px 0;
    border-color: #f1f1f1;
  }
}
.pickadate-cell .current-date{
  color: #66CCFF !important;
}

#modal .ngmodal-uidate-wrap {
  width: 480px;  
}

.service-status-date #modal .ngmodal-uidate-wrap {
  width: 100%;
  max-width: 480px;  
}
/* ... */

